# dekko

./: CMakeLists.txt  HACKING.md  LICENSE  README.md  bootstrap.sh  build_click  build_fat_package.sh  push-helper.py  update_translations.py
click/: com.ubuntu.developer.dpniel.dekko_dekko.application  com.ubuntu.developer.dpniel.dekko_dekko.service  dekko-content.json  dekko.apparmor  dekko.url-dispatcher  manifest.json  pushHelper-apparmor.json
cmake/: FindQt5LinguistForDekko.cmake  TrojitaVersion.cmake
icons/actions/: actionicons.qrc
icons/providers/: providericons.qrc
po/: dekko.dekkoproject.pot
qml/: main.qml
qml/AccountsView/: AccountsDelegate.qml  AccountsDrawer.qml  AccountsDrawerDelegate.qml  AccountsListView.qml  AccountsPage.qml
qml/Components/: ActionDrawer.qml  AddressField.qml  AddressWidget.qml  AddressWidgets.qml  BasePageWithComposer.qml  CachedImage.qml  CheckboxWithLabel.qml  CircleGravatar.qml  DekkoHeader.qml  DekkoPage.qml  DekkoSwitch.qml  EncryptionSelector.qml  FilterBar.qml  HeaderButton.qml  HeaderComponent.qml  HeaderRecipientRow.qml  HorizontalGradiant.qml  ImageWithFallBack.qml  ListItemWithActions.qml  ListItemWithActionsCheckBox.qml  MailboxPicker.qml  MessageListToolbar.qml  MultipleSelectionListView.qml  SectionDivider.qml  Selector.qml  TaskProgressBar.qml  TitledTextArea.qml  TitledTextField.qml
qml/Composer/: AttachmentField.qml  ComposePage.qml  ComposePageHeadConfiguration.qml  ComposePanel.qml  DraftsPanel.qml  IdentitySelector.qml  MessageComposer.qml  MessageField.qml  RecipientField.qml  RecipientInput.qml  RecipientTypeSelector.qml  RecipientTypeSelectorListView.qml  SubjectField.qml  TypedRecipientField.qml
qml/Contact/: AddressbookModel.qml  AddressbookPage.qml  ContactChoicePage.qml  ContactDetailPage.qml  ContactEditPage.qml  PlainTextInput.qml
qml/Contact/imports/: ContactAvatar.qml  ContactDelegate.qml  Contacts.js  SectionDelegate.qml
qml/DeveloperMode/: DevSettingsTabs.qml  DeveloperSettings.qml  ImapCapabilitiesView.qml
qml/Dialogs/: ActivityDialog.qml  ConfirmationDialog.qml  ContentPickerDialog.qml  DialogBase.qml  DraftsDialog.qml  InfoDialog.qml  MoveMessageActionDialog.qml  NetworkPolicyDialog.qml  PasswordDialog.qml  PopupQueue.qml  SslSheet.qml  SubmissionStatusDialog.qml
qml/MailboxView/: LoadingOverlay.qml  MailboxActionPopover.qml  MailboxListDelegate.qml  MailboxListPage.qml  MailboxListView.qml
qml/MessageListView/: LightWeightDelegate.qml  MessageListActionPopover.qml  MessageListDelegate.qml  MessageListPage.qml  MessagesListView.qml  MultiSelectToolbar.qml
qml/MessageView/: DekkoWebView.qml  OneMessagePage.qml  app.css  app.js  contact-message.js
qml/MessageView/UbuntuUI/: core.js
qml/Notifications/: NotificationsService.qml
qml/Settings/: AboutPage.qml  ServerView.qml
qml/Settings/common/: SettingsGroupBase.qml  SettingsGroupView.qml  SettingsListItem.qml
qml/Settings/global/: CachePolicySelector.qml  CompositionSettingsPage.qml  GlobalSettingsListModel.qml  GlobalSettingsListView.qml  MarkReadSelector.qml  OfflineSettingsPage.qml  PreviewSelector.qml
qml/Settings/user/: AccountListModel.qml  AccountsListPage.qml  IdentitiesList.qml  MailboxBehaviour.qml  MboxSelector.qml  NewIdentityPage.qml  OutgoingServerSettings.qml  ProfileSettingsPage.qml  QuoteSelector.qml  SenderIdentityInput.qml  ServerSettings.qml  SettingsGroupListModel.qml  SignatureSelector.qml
qml/SetupWizard/: AccountSetup.qml  BasicSetup.qml  ManualSetup.qml  NewAccountPage.qml  NewAccountTypeListView.qml  SetupWalkThrough.qml
qml/Theme/: CheckBoxStyle.qml  PartialColorize.qml  SwitchStyle.qml
qml/UCSComponents/: EmptyState.qml  PageWithBottomEdge.qml  RadialAction.qml  RadialBottomEdge.qml
qml/Utils/: DummyNetworkStatus.qml  QueuedApplicationAlertManager.qml  Utils.js
src/app/: dekko.desktop  main.cpp  push-helper.cpp
src/app/Accounts/: Account.cpp  Account.h  AccountUtils.cpp  AccountUtils.h  AccountsManager.cpp  AccountsManager.h  MultipleAccountSenderIdentityModel.cpp  MultipleAccountSenderIdentityModel.h  PasswordManager.cpp  PasswordManager.h  SenderIdentity.cpp  SenderIdentity.h  SenderIdentityModel.cpp  SenderIdentityModel.h
src/app/Components/: ImageHelper.cpp  ImageHelper.h  ListViewWithPageHeader.cpp  ListViewWithPageHeader.h  QmlObjectListModel.cpp  QmlObjectListModel.h
src/app/Composition/: ComposerUtils.cpp  ComposerUtils.h  ReplyMode.cpp  ReplyMode.h  SubmissionManager.cpp  SubmissionManager.h
src/app/Contacts/: ContactFilterModel.cpp  ContactFilterModel.h  ContactsModel.cpp  ContactsModel.h  FlattenContactFilterModel.cpp  FlattenContactFilterModel.h  FlattenContactModel.cpp  FlattenContactModel.h
src/app/MailConfig/: AutoConfig.cpp  AutoConfig.h  ImapSettingVerifier.cpp  ImapSettingVerifier.h  MailConfig.cpp  MailConfig.h  MailConfigFromAutoconfig.cpp  MailConfigFromAutoconfig.h
src/app/Models/: AccountsListModel.cpp  AccountsListModel.h  AttachmentListModel.cpp  AttachmentListModel.h  MailboxFilterModel.cpp  MailboxFilterModel.h  MailboxProxyModel.cpp  MailboxProxyModel.h  MessageBuilder.cpp  MessageBuilder.h  MessageListFilterModel.cpp  MessageListFilterModel.h  MessageListModel.cpp  MessageListModel.h  MessageModel.cpp  MessageModel.h  PreSetProviderModel.cpp  PreSetProviderModel.h  Recipient.cpp  Recipient.h  RecipientListFilterModel.cpp  RecipientListFilterModel.h  RecipientListModel.cpp  RecipientListModel.h
src/app/Network/: MsgPartNetAccessManagerFactory.cpp  MsgPartNetAccessManagerFactory.h
src/app/Notifications/: MailboxWatcher.cpp  MailboxWatcher.h  NotificationService.cpp  NotificationService.h  NotificationWorker.cpp  NotificationWorker.h  PostalServiceWorker.cpp  PostalServiceWorker.h
src/app/Settings/: GlobalSettings.cpp  GlobalSettings.h  MailboxSettings.cpp  MailboxSettings.h  NotificationSettings.cpp  NotificationSettings.h  Settings.cpp  Settings.h  SettingsFileBase.cpp  SettingsFileBase.h  SettingsNames.cpp  SettingsNames.h  SettingsObjectBase.cpp  SettingsObjectBase.h
src/configuration/: domainService.conf  serviceProviders.conf  styles.conf
(+30 files in other folders)
